# trust_router

./: .gitignore  .gitlab-ci.yml  APKBUILD.in  APKBUILD.in.alpine310  APKBUILD.in.alpine38  APKBUILD.in.alpine39  CMakeLists.txt  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  schema.sql  tids.confd  tids.initd  tids.service  trust_router.initd  trust_router.post-install  trust_router.pre-install  trust_router.service  trust_router.spec  trust_router.spec.in
common/: jansson_iterators.h  ssl-compat.c  t_constraint.c  tests.json  tr_aaa_server.c  tr_apc.c  tr_comm.c  tr_comm_encoders.c  tr_config.c  tr_config_comms.c  tr_config_encoders.c  tr_config_filters.c  tr_config_internal.c  tr_config_orgs.c  tr_config_realms.c  tr_config_rp_clients.c  tr_constraint.c  tr_debug.c  tr_dh.c  tr_extlog.c  tr_filter.c  tr_filter_encoders.c  tr_gss.c  tr_gss_client.c  tr_gss_names.c  tr_idp.c  tr_idp_encoders.c  tr_inet_util.c  tr_list.c  tr_mq.c  tr_msg.c  tr_name.c  tr_rand_id.c  tr_rp.c  tr_rp_client.c  tr_rp_client_encoders.c  tr_socket.c  tr_util.c
common/cfg_test/: cfg_test.c  idp.cfg
common/dh_test/: dh_test  dh_test.c
common/mq_test/: mq_test.c  thread_test.c
common/tests/: cfg_test.c  commtest.c  dh_test.c  filt_test.c  idp.cfg  mq_test.c  name_test.c  thread_test.c
common/tests/test-filters/: filt-inforec-1-msg.json  filt-inforec-1.json  filt-tidreq-1-msg.json  filt-tidreq-1.json  filter-tests.json  invalid-filt-repeated-key.json  invalid-filt-unknown-field.json  valid-filt.json
debian/: .git-dpm  README  TODO  changelog  control  copyright  gbp.conf  libtr-tid2.symbols  moonshot-trust-router-dev.install  moonshot-trust-router.dirs  moonshot-trust-router.install  moonshot-trust-router.lintian-overrides  moonshot-trust-router.postinst  moonshot-trust-router.postrm  moonshot-trust-router.tids.init  rules  tids-wrapper  tids.initd
debian/patches/: 0002-Add-default-aaa-server-to-config-printout-remove-red.patch  0002-remove-indentation-in-makefile-which-breaks-install-.patch  0003-Remove-period-from-default-configuration-message.patch  gitignore  series
debian/patches/upstream/: 0002-Bring-back-portal.cfg-and-manual.cfg.patch
debian/source/: options
doc/: trust_router_config.md
gsscon/: .#gsscon_test.c  Makefile.am  Makefile.in  gsscon.h~  gsscon_active.c  gsscon_active.c~  gsscon_common.c  gsscon_common.c~  gsscon_passive.c  gsscon_passive.c~
gsscon/test/: .gitignore  gsscon_client.c  gsscon_client.c~  gsscon_server.c  gsscon_server.c~
include/: gsscon.h  mon.h  mon_internal.h  mons_handlers.h  ssl-compat.h  tid.h  tid_internal.h  tidr.h  tpq.h  tr.h  tr_aaa_server.h  tr_apc.h  tr_cfgwatch.h  tr_comm.h  tr_config.h  tr_constraint.h  tr_constraint_internal.h  tr_debug.h  tr_dh.h  tr_event.h  tr_filter.h  tr_gss.h  tr_gss_client.h  tr_gss_names.h  tr_idp.h  tr_inet_util.h  tr_json_util.h  tr_list.h  tr_mon.h  tr_mq.h  tr_msg.h  tr_name.h  tr_name_internal.h  tr_rand_id.h  tr_rp.h  tr_rp_client.h  tr_socket.h  tr_tid.h  tr_trp.h  tr_util.h  (+7 more)
include/trust_router/: tid.h  tr_constraint.h  tr_dh.h  tr_extlog.h  tr_name.h  trp.h
m4/: .ignore-this-file
mon/: mon_common.c  mon_req.c  mon_req_decode.c  mon_req_encode.c  mon_resp.c  mon_resp_decode.c  mon_resp_encode.c  mon_tr_msg.c  monc.c  mons.c  mons_handlers.c  mons_handlers.h  mons_handlers_show.c  tr_mon.c  tr_mon_req.c  tr_mon_req.h  tr_mon_req_decode.c  tr_mon_req_encode.c  tr_mon_resp.c  tr_mon_resp_encode.c
mon/test/: test_mon_req_decode.c  test_mon_req_encode.c
mon/tests/: req_reconfigure.test  req_show_all_options.test  req_show_no_options.test  resp_reconfigure_error.test  resp_reconfigure_success.test  resp_show_success.test  test_mon_req_decode.c  test_mon_req_encode.c  test_mon_resp_encode.c
redhat/: default-internal.cfg  default-main.cfg  init  organizations.cfg  sysconfig  sysconfig.tids  tidc-wrapper  tids-wrapper  tids.init  tids.initd  tids.service  tr-test-internal.cfg  tr-test-main.cfg  trust_router-wrapper
tests/: t_libtr_tid_la.c
tid/: tid_req.c  tid_resp.c  tid_tr_msg.c  tidc.c  tids.c
tid/example/: tidc_main.c  tids_main.c
tidr/: tidrc.c  tidrs.c
tidr/example/: tidrc_main.c  tidrs_main.c
tpq/: tpq_common.c  tpq_json.c  tpqc.c  tpqs.c
tpq/example/: tpqc_main.c  tpqs_main.c
tpq/example_tpqc/: tpqc_main.c
tr/: default.cfg  internal.cfg  manual.cfg  organizations.cfg  portal.cfg  tr.c  tr_cfgwatch.c  tr_config.c  tr_event.c  tr_main.c  tr_main.c~  tr_mon.c  tr_tid.c  tr_tid_mons.c  tr_trp.c  tr_trp_mons.c  trmon_main.c  trpc_main.c
trp/: msgtst.c  trp_conn.c  trp_filter.c  trp_msg.c  trp_peer.c  trp_peer_encoders.c  trp_ptable.c  trp_ptable_encoders.c  trp_req.c  trp_route.c  trp_route_encoders.c  trp_rtable.c  trp_rtable_encoders.c  trp_tr_msg.c  trp_upd.c  trpc.c  trps.c
trp/test/: ptbl_test.c  rtbl_test.c
